@@ -1,0 +1,24 @@
+/* XPM */
+static char *xpm_picker_xpm[] = {
+"17 17 3 1 2 16",
+"0	c #000000",
+"1	c #FFFFFF",
+" 	c None",
+"            111  ",
+"           10001 ",
+"          1000001",
+"        111000001",
+"       1000000001",
+"        10000001 ",
+"        0100011  ",
+"       0111001   ",
+"      01110101   ",
+"     01110  1    ",
+"    01110        ",
+"   01110         ",
+"  01110          ",
+" 01110           ",
+" 0110            ",
+"0 00             ",
+" 0               "
+};
