@@ -1003,7 +1003,7 @@ enum {
 #define VISMASK(N) WBh(ACTMAP, 2), (void *)(N), NULL
 #define KEYMAP(V, NM) WBrhf(KEYMAP, 2), WBfield(V), (NM)
 #define SHORTCUTs(NM) WBh(SHORTCUT, 1), (NM)
-#define SHORTCUT(K,M) WBh(SHORTCUT, 2), (void *)(GDK_##K), (void *)(_##M##mask)
+#define SHORTCUT(K,M) WBh(SHORTCUT, 2), (void *)KEY(K), (void *)(_##M##mask)
 #define SHORTCUT0 WBh(SHORTCUT, 0)
 #define GROUPR WBrh(uOP, 0)
 #define GROUP0 WBrhs(uOP, 0)
